Move the m/r functions out of the root, show the stats link when you shorten.

--- a/templates/created.haml
+++ b/templates/created.haml
@@ -8,3 +8,6 @@
     %div
       Copy this link:
       %a{:href => @url}= @url
+      %br/
+      To see statistics for the URL, use this link:
+      %a{:href => @stats_url}= @stats_url
