Update, add optional message to front page.

--- a/templates/index.haml
+++ b/templates/index.haml
@@ -10,3 +10,4 @@
         %label{:for => "url"} URL:
         %input{:type => "text", :size => 50, :name => "url", :id => "url"}/
         %button{:type => "submit"} Create
+      %p= @message
